@@ -34,7 +34,7 @@ __all__ = ["PSF", "DCD", "CRD",                 # CHARMM
            "PSF_NAMD", "PDB_NAMD",            # NAMD
            "PDB_small",                         # PDB
            "PDB_multiframe",
-           "PDB", "GRO", "XTC", "TRR", "TPR",   # Gromacs
+           "PDB", "GRO", "XTC", "TRR", "TPR", "GRO_velocity",   # Gromacs
            "XYZ", "XYZ_psf", "XYZ_bz2",         # XYZ
            "PRM", "TRJ", "TRJ_bz2",             # Amber (no periodic box)
            "PRMpbc", "TRJpbc_bz2",              # Amber (periodic box)
@@ -57,6 +57,7 @@ PDB_NAMD = resource_filename(__name__, 'data/namd_cgenff.pdb')
 PDB_small = resource_filename(__name__, 'data/adk_open.pdb')
 PDB_multiframe = resource_filename(__name__, 'data/nmr_neopetrosiamide.pdb')
 GRO = resource_filename(__name__, 'data/adk_oplsaa.gro')
+GRO_velocity = resource_filename(__name__, 'data/sample_velocity_file.gro')
 PDB = resource_filename(__name__, 'data/adk_oplsaa.pdb')
 XTC = resource_filename(__name__, 'data/adk_oplsaa.xtc')
 TRR = resource_filename(__name__, 'data/adk_oplsaa.trr')
